--- a/apps/widget/index.html
+++ b/apps/widget/index.html
@@ -15,11 +15,10 @@
       </p>
     </div>
     
-    <!-- Widget embed script -->
-    <script type="module" src="/src/embed.ts"></script>
+    <!-- Set restaurant slug before loading widget -->
     <script>
-      // Simulate embedding with restaurant slug
-      window.RESTAURANT_SLUG = 'demo-restaurant';
+      window.RESTAURANT_SLUG = 'test-restaurant';
     </script>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
